--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ border-radius: 5px;
     background-size: 100%;
 }
 .column {
-    display:inline;
+    display:inline-block;
     margin:5px 20px;
     padding:5px;
     
@@ -31,6 +31,10 @@ border-radius: 5px;
 .row {
     text-align:center;
     }
+
+.caption {
+    display: block;
+}
 
 .text {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
